progressif/main/default/objects/OfferCriterion__c/OfferCriterion__c.object-meta.xml
<CustomObject>
    <label>Critère de l&#39;offre</label>
    <nameField>
        <displayFormat>CRIT-{0000}</displayFormat>
        <label>Numéro de Critère</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critères de l&#39;offre</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>