progressif/main/default/objects/OfferCriterion__c/fields/criterion__c.field-meta.xml
<CustomField>
    <fullName>criterion__c</fullName>
    <label>Critère</label>
    <referenceTo>Criterion__c</referenceTo>
    <relationshipLabel>Critères de l&#39;offre</relationshipLabel>
    <relationshipName>ChildCriterion</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>