progressif/main/default/objects/OfferCriterion__c/fields/CriterionResponse__c.field-meta.xml
<CustomField>
    <fullName>CriterionResponse__c</fullName>
    <label>Réponse de critère</label>
    <length>250</length>
    <type>Text</type>
</CustomField>