progressif/main/default/objects/OfferCriterion__c/fields/CriterionToSendToOPA__c.field-meta.xml
<CustomField>
    <fullName>CriterionToSendToOPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critère à envoyer à OPA</label>
    <type>Checkbox</type>
</CustomField>