progressif/main/default/objects/OfferCriterion__c/fields/CriterionType__c.field-meta.xml
<CustomField>
    <fullName>CriterionType__c</fullName>
    <formula>TEXT(criterion__r.TypeCriterion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type du critère</label>
    <type>Text</type>
</CustomField>