progressif/main/default/objects/OfferCriterion__c/fields/FormatCriterion__c.field-meta.xml
<CustomField>
    <fullName>FormatCriterion__c</fullName>
    <formula>criterion__r.FormatCriterion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Format du critère</label>
    <type>Text</type>
</CustomField>