progressif/main/default/objects/OfferCriterion__c/fields/helpText__c.field-meta.xml
<CustomField>
    <fullName>helpText__c</fullName>
    <label>InfoBulle</label>
    <type>TextArea</type>
</CustomField>