progressif/main/default/objects/OfferCriterion__c/fields/IfResponse__c.field-meta.xml
<CustomField>
    <fullName>IfResponse__c</fullName>
    <label>Si réponse</label>
    <length>250</length>
    <type>Text</type>
</CustomField>