progressif/main/default/objects/OfferCriterion__c/fields/MainCriterion__c.field-meta.xml
<CustomField>
    <fullName>MainCriterion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Critère principal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Aucun critère de l&#39;offre trouvé</errorMessage>
        <filterItems>
            <field>$Source.Offer__c</field>
            <operation>equals</operation>
            <valueField>OfferCriterion__c.Offer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OfferCriterion__c</referenceTo>
    <relationshipLabel>Critères secondaires</relationshipLabel>
    <relationshipName>ChildSecondaryCriterionOfferCriterion</relationshipName>
    <type>Lookup</type>
</CustomField>