progressif/main/default/objects/OfferCriterion__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligatoire</label>
    <type>Checkbox</type>
</CustomField>