progressif/main/default/objects/OfferCriterion__c/fields/Maxlength__c.field-meta.xml
<CustomField>
    <fullName>Maxlength__c</fullName>
    <label>Nbr de caractères maximal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>