progressif/main/default/objects/OfferCriterion__c/fields/MessageRangeOverFlow__c.field-meta.xml
<CustomField>
    <fullName>MessageRangeOverFlow__c</fullName>
    <label>Message erreur max</label>
    <type>TextArea</type>
</CustomField>