progressif/main/default/objects/OfferCriterion__c/fields/MessageRangeUnderFlow__c.field-meta.xml
<CustomField>
    <fullName>MessageRangeUnderFlow__c</fullName>
    <label>Message d&#39;erreur min</label>
    <type>TextArea</type>
</CustomField>