progressif/main/default/objects/OfferCriterion__c/fields/MessageValueMissing__c.field-meta.xml
<CustomField>
    <fullName>MessageValueMissing__c</fullName>
    <label>Message d&#39;erreur obligatoire</label>
    <type>TextArea</type>
</CustomField>