progressif/main/default/objects/OfferCriterion__c/fields/messageWhenPatternMismatch__c.field-meta.xml
<CustomField>
    <fullName>messageWhenPatternMismatch__c</fullName>
    <label>Message erreur format</label>
    <type>TextArea</type>
</CustomField>