progressif/main/default/objects/OfferCriterion__c/fields/MessageWhenTooLong__c.field-meta.xml
<CustomField>
    <fullName>MessageWhenTooLong__c</fullName>
    <label>Message erreur maxlength</label>
    <type>TextArea</type>
</CustomField>