progressif/main/default/objects/OfferCriterion__c/fields/MessageWhenTooShort__c.field-meta.xml
<CustomField>
    <fullName>MessageWhenTooShort__c</fullName>
    <label>Message erreur minlength</label>
    <type>TextArea</type>
</CustomField>