progressif/main/default/objects/OfferCriterion__c/fields/Minlength__c.field-meta.xml
<CustomField>
    <fullName>Minlength__c</fullName>
    <label>Nbr de caractères minimal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>