progressif/main/default/objects/OfferCriterion__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offre</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipName>Crit_res</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>