progressif/main/default/objects/OfferCriterion__c/fields/OfferBusinessProcess__c.field-meta.xml
<CustomField>
    <fullName>OfferBusinessProcess__c</fullName>
    <formula>TEXT(Offer__r.TypeProcess__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de parcours de l&#39;offre</label>
    <type>Text</type>
</CustomField>