progressif/main/default/objects/OfferCriterion__c/fields/OPACriterionName__c.field-meta.xml
<CustomField>
    <fullName>OPACriterionName__c</fullName>
    <externalId>true</externalId>
    <label>Nom du critère OPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>