progressif/main/default/objects/OfferCriterion__c/fields/OrderDisplay__c.field-meta.xml
<CustomField>
    <fullName>OrderDisplay__c</fullName>
    <inlineHelpText>Bonne pratique : saisissez comme ordre d&#39;affichage 10, 20 plutôt que 1, 2. Ainsi, vous pourrez insérer un critère plus tard sans devoir changer la numérotation !</inlineHelpText>
    <label>Ordre d&#39;affichage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>