progressif/main/default/objects/OfferCriterion__c/fields/PreviousOfferCriterion__c.field-meta.xml
<CustomField>
    <fullName>PreviousOfferCriterion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Critère de l&#39;offre précédente</label>
    <referenceTo>OfferCriterion__c</referenceTo>
    <relationshipLabel>Critères de l&#39;offre précédente</relationshipLabel>
    <relationshipName>ChildPreviousOfferCriterion</relationshipName>
    <type>Lookup</type>
</CustomField>