progressif/main/default/objects/OfferCriterion__c/fields/replaceLabel__c.field-meta.xml
<CustomField>
    <fullName>replaceLabel__c</fullName>
    <label>Remplacer le libellé de critère</label>
    <type>TextArea</type>
</CustomField>