progressif/main/default/objects/OfferCriterion__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>