progressif/main/default/objects/OfferCriterion__c/fields/TargetCriterion__c.field-meta.xml
<CustomField>
    <fullName>TargetCriterion__c</fullName>
    <label>Cible du critère</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Target</valueSetName>
    </valueSet>
</CustomField>