progressif/main/default/objects/OfferCriterion__c/fields/TECH_LabelToDisplay__c.field-meta.xml
<CustomField>
    <fullName>TECH_LabelToDisplay__c</fullName>
    <formula>IF(NOT ISBLANK( replaceLabel__c ),replaceLabel__c, criterion__r.LabelCriterion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libellé du critère TECH</label>
    <type>Text</type>
</CustomField>