progressif/main/default/objects/OfferCriterion__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>