progressif/main/default/objects/OfferCriterion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offer__c</columns>
    <columns>criterion__c</columns>
    <columns>Mandatory__c</columns>
    <columns>OrderDisplay__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>