progressif/main/default/objects/OfferCriterion__c/listViews/main_criteria.listView-meta.xml
<ListView>
    <fullName>main_criteria</fullName>
    <columns>NAME</columns>
    <columns>criterion__c</columns>
    <columns>Offer__c</columns>
    <columns>MainCriterion__c</columns>
    <columns>Status__c</columns>
    <columns>IfResponse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Secondaire</value>
    </filters>
    <label>Critères secondaires</label>
</ListView>